--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: osca4anvil
 Title: Simplify production of computable OSCA texts and artifacts for AnVIL
-Version: 0.0.1
+Version: 0.0.2
 Authors@R:
     person(given = "Vince",
            family = "Carey",
@@ -9,8 +9,8 @@ Authors@R:
            comment = c(ORCID = "0000-0003-4046-0063"))
 Description: Simplify production of computable OSCA texts and artifacts for AnVIL.
 Depends: R (>= 4.0.0), tools, utils
-Suggests: knitr, BiocStyle, testthat, rmarkdown, OSCA
-Imports: gert
+Suggests: BiocStyle, testthat, rmarkdown, OSCA
+Imports: gert, remotes, DropletUtils, BiocFileCache, knitr
 License: Artistic-2.0
 VignetteBuilder: knitr
 biocViews: DNAMethylation
