--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,9 +9,10 @@ Authors@R:
            comment = c(ORCID = "0000-0003-4046-0063"))
 Description: Simplify production of computable OSCA texts and artifacts for AnVIL.
 Depends: R (>= 4.0.0), tools, utils
-Suggests: BiocStyle, testthat, rmarkdown, OSCA
+Suggests: BiocStyle, testthat, rmarkdown
 Imports: gert, remotes, DropletUtils, BiocFileCache, knitr
 License: Artistic-2.0
 VignetteBuilder: knitr
 biocViews: DNAMethylation
 RoxygenNote: 7.1.2
+Encoding: UTF-8
