--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,9 @@ export(make_pbmc)
 export(make_url)
 export(packs)
 export(run_vignettes_code)
+export(show_packs)
+export(wr_bioc)
+export(wr_cran)
 importFrom(BiocFileCache,BiocFileCache)
 importFrom(BiocFileCache,bfcrpath)
 importFrom(DropletUtils,read10xCounts)
