improve show_packs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,11 @@ export(packs)
 export(run_vignettes_code)
 export(show_packs)
 export(wr_bioc)
+export(wr_bioc_expt)
 export(wr_cran)
 importFrom(BiocFileCache,BiocFileCache)
 importFrom(BiocFileCache,bfcrpath)
+importFrom(DT,datatable)
 importFrom(DropletUtils,read10xCounts)
 importFrom(gert,git_clone)
 importFrom(knitr,purl)
