--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: osca4anvil
 Title: Simplify production of computable OSCA texts and artifacts for AnVIL
-Version: 0.0.6
+Version: 0.0.7
 Authors@R:
     person(given = "Vince",
            family = "Carey",
@@ -10,9 +10,10 @@ Authors@R:
 Description: Simplify production of computable OSCA texts and artifacts for AnVIL.
 Depends: R (>= 4.0.0), tools, utils
 Suggests: BiocStyle, testthat, rmarkdown
-Imports: gert, remotes, DropletUtils, BiocFileCache, knitr
+Imports: gert, remotes, DropletUtils, BiocFileCache, knitr, DT
 License: Artistic-2.0
 VignetteBuilder: knitr
 biocViews: DNAMethylation
 RoxygenNote: 7.1.2
+LazyData: true
 Encoding: UTF-8
